# vicare-cre2

./: ANNOUNCE  Makefile.am  README  configure.ac
doc/: macros.texi  vicare-cre2.texi
lib/: dependencies.make  features.c  libraries.scm
lib/vicare/regexps/: cre2.vicare.sls
lib/vicare/regexps/cre2/: constants.vicare.sls.in  unsafe-capi.vicare.sls
src/: vicare-cre2-core.c  vicare-cre2-internals.h  vicare-cre2-version.c
tests/: demo-for-plain-documentation.sps  test-vicare-cre2.sps
